# SenseVoice-ComfyUI

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
js/: innerText.js
